src/app/invoicingSimulator/InvoicingSimulator.css
.tp-invoicing-simulator {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: max-content 1fr;
    grid-row-gap: 1em;
    grid-column-gap: 0.8em;

    min-height: 0;
    padding: 1em;
    background-color: var(--cc-color-bg-light);
}

.tp-invoicing-simulator .tp-invoicing-simulator-header {
    grid-column: 1 / 4;
    grid-row: 1;
    justify-self: end;
    padding-right: 1em;

    font-weight: bold;
    font-size: 2em;
}

.tp-invoicing-simulator .tp-invoicing-simulator-list {
    grid-row: 2;

    display: flex;
    flex-direction: column;
    overflow-y: auto;

    background-color: var(--cc-color-bg-white);
    box-shadow: 1px 1px 6px 2px var(--cc-color-border-light);
    margin-bottom: 6px;

    padding: 0.8em;
}

.tp-invoicing-simulator .tp-invoicing-simulator-list .cc-list-empty-state {
    display: flex;
    flex-direction: column;
    align-self: center;
    padding-top: 3.0em;

    color: var(--cc-color-text-light);
    font-weight: bold;
    font-size: 1.5em;
}

.tp-invoicing-simulator .tp-invoicing-simulator-list .cc-list-item {
    padding: 0.3em;

    box-shadow: 1px 1px 3px 1px var(--cc-color-border-light);
    margin-bottom: 12px;

    animation: show .2s ease-in-out;
}

.tp-invoicing-simulator .tp-invoicing-simulator-list .cc-list-item:last-child {
    margin-bottom: 0;
}

@keyframes show {
    from {
        opacity: 0;
    }
}

